chore: renaming openapis and change path PAGOPA-3285
