# openapi/openapi-support-internal.json
@@ -1,32 +1,14 @@
 {
   "openapi" : "3.0.1",
-  "info" : {
-    "title" : "GPD-Upload-Support-API",
-    "description" : "Microservice to manage PagoPA GPD Upload",
-    "termsOfService" : "https://www.pagopa.gov.it/",
-    "version" : "0.1.22"
-  },
   "servers" : [ {
-    "url" : "http://localhost:8080"
-  }, {
-    "url" : "https://{host}{basePath}",
-    "variables" : {
-      "basePath" : {
-        "default" : "/upload/gpd/debt-positions-service/v1",
-        "enum" : [ "/upload/gpd/debt-positions-service/v1", "/upload/aca/debt-positions-service/v1" ]
-      },
-      "host" : {
-        "default" : "api.dev.platform.pagopa.it",
-        "enum" : [ "api.dev.platform.pagopa.it", "api.uat.platform.pagopa.it", "api.platform.pagopa.it" ]
-      }
-    }
+    "url" : "/"
   } ],
   "paths" : {
     "/brokers/{broker-code}/organizations/{organization-fiscal-code}/debtpositions/file" : {
       "put" : {
-        "tags" : [ "Debt Positions CRUD via file upload API" ],
+        "tags" : [ "Massive operation APIs for Debt Positions - v2" ],
         "summary" : "The Organization updates the debt positions listed in the file.",
-        "operationId" : "update-debt-positions-by-file-upload_1",
+        "operationId" : "update-debt-positions-by-file-upload",
         "parameters" : [ {
           "name" : "broker-code",
           "in" : "path",
@@ -139,9 +121,9 @@
         } ]
       },
       "post" : {
-        "tags" : [ "Debt Positions CRUD via file upload API" ],
+        "tags" : [ "Massive operation APIs for Debt Positions - v2" ],
         "summary" : "The Organization creates the debt positions listed in the file.",
-        "operationId" : "create-debt-positions-by-file-upload_1",
+        "operationId" : "create-debt-positions-by-file-upload",
         "parameters" : [ {
           "name" : "broker-code",
           "in" : "path",
@@ -254,9 +236,9 @@
         } ]
       },
       "delete" : {
-        "tags" : [ "Debt Positions CRUD via file upload API" ],
+        "tags" : [ "Massive operation APIs for Debt Positions - v2" ],
         "summary" : "The Organization deletes the debt positions based on IUPD listed in the file.",
-        "operationId" : "delete-debt-positions-by-file-upload_1",
+        "operationId" : "delete-debt-positions-by-file-upload",
         "parameters" : [ {
           "name" : "broker-code",
           "in" : "path",
@@ -368,384 +350,10 @@
           "Authorization" : [ ]
         } ]
       }
-    },
-    "/brokers/{broker-code}/organizations/{organization-fiscal-code}/debtpositions/file/{file-id}/report" : {
-      "get" : {
-        "tags" : [ "Upload Status API" ],
-        "summary" : "Returns the debt positions upload report.",
-        "operationId" : "get-debt-positions-upload-report_1",
-        "parameters" : [ {
-          "name" : "broker-code",
-          "in" : "path",
-          "description" : "The broker code",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "minLength" : 1,
-            "type" : "string"
-          }
-        }, {
-          "name" : "organization-fiscal-code",
-          "in" : "path",
-          "description" : "The organization fiscal code",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "minLength" : 1,
-            "type" : "string"
-          }
-        }, {
-          "name" : "file-id",
-          "in" : "path",
-          "description" : "The unique identifier for file upload",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "minLength" : 1,
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Upload report found.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/UploadReport"
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "Malformed request.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "401" : {
-            "description" : "Wrong or missing function key.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "403" : {
-            "description" : "Forbidden",
-            "content" : {
-              "application/json" : {
-                "schema" : { }
-              }
-            }
-          },
-          "404" : {
-            "description" : "Upload report not found.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "429" : {
-            "description" : "Too many requests.",
-            "content" : {
-              "text/json" : { }
-            }
-          },
-          "500" : {
-            "description" : "Service unavailable.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          }
-        },
-        "security" : [ {
-          "ApiKey" : [ ]
-        }, {
-          "Authorization" : [ ]
-        } ]
-      }
-    },
-    "/brokers/{broker-code}/organizations/{organization-fiscal-code}/debtpositions/file/{file-id}/status" : {
-      "get" : {
-        "tags" : [ "Upload Status API" ],
-        "summary" : "Returns the debt positions upload status.",
-        "operationId" : "get-debt-positions-upload-status_1",
-        "parameters" : [ {
-          "name" : "broker-code",
-          "in" : "path",
-          "description" : "The broker code",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "minLength" : 1,
-            "type" : "string"
-          }
-        }, {
-          "name" : "organization-fiscal-code",
-          "in" : "path",
-          "description" : "The organization fiscal code",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "minLength" : 1,
-            "type" : "string"
-          }
-        }, {
-          "name" : "file-id",
-          "in" : "path",
-          "description" : "The unique identifier for file upload",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "minLength" : 1,
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "Upload found.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/UploadStatus"
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "Malformed request.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "401" : {
-            "description" : "Wrong or missing function key.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "403" : {
-            "description" : "Forbidden",
-            "content" : {
-              "application/json" : {
-                "schema" : { }
-              }
-            }
-          },
-          "404" : {
-            "description" : "Upload not found.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "429" : {
-            "description" : "Too many requests.",
-            "content" : {
-              "text/json" : { }
-            }
-          },
-          "500" : {
-            "description" : "Service unavailable.",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          }
-        },
-        "security" : [ {
-          "ApiKey" : [ ]
-        }, {
-          "Authorization" : [ ]
-        } ]
-      }
-    },
-    "/info" : {
-      "get" : {
-        "tags" : [ "Health check" ],
-        "summary" : "health check",
-        "description" : "Return OK if application is started",
-        "operationId" : "healthCheck",
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/AppInfo"
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "Bad Request",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "401" : {
-            "description" : "Unauthorized",
-            "content" : {
-              "application/json" : {
-                "schema" : { }
-              }
-            }
-          },
-          "403" : {
-            "description" : "Forbidden",
-            "content" : {
-              "application/json" : {
-                "schema" : { }
-              }
-            }
-          },
-          "429" : {
-            "description" : "Too many requests.",
-            "content" : {
-              "text/json" : { }
-            }
-          },
-          "500" : {
-            "description" : "Service unavailable",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/support/uploads/{upload}/status/refresh" : {
-      "get" : {
-        "tags" : [ "Support API" ],
-        "summary" : "Support API to recover status on CREATE and DELETE operation",
-        "description" : "Returns the debt positions upload report recovered.",
-        "operationId" : "recoverStatus",
-        "parameters" : [ {
-          "name" : "upload",
-          "in" : "path",
-          "description" : "The unique identifier for file upload",
-          "required" : true,
-          "style" : "simple",
-          "explode" : false,
-          "schema" : {
-            "minLength" : 1,
-            "type" : "string"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "OK",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/AppInfo"
-                }
-              }
-            }
-          },
-          "400" : {
-            "description" : "Bad Request",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          },
-          "401" : {
-            "description" : "Unauthorized",
-            "content" : {
-              "application/json" : {
-                "schema" : { }
-              }
-            }
-          },
-          "403" : {
-            "description" : "Forbidden",
-            "content" : {
-              "application/json" : {
-                "schema" : { }
-              }
-            }
-          },
-          "429" : {
-            "description" : "Too many requests.",
-            "content" : {
-              "text/json" : { }
-            }
-          },
-          "500" : {
-            "description" : "Service unavailable",
-            "content" : {
-              "application/json" : {
-                "schema" : {
-                  "$ref" : "#/components/schemas/ProblemJson"
-                }
-              }
-            }
-          }
-        }
-      }
     }
   },
   "components" : {
     "schemas" : {
-      "AppInfo" : {
-        "type" : "object",
-        "properties" : {
-          "name" : {
-            "type" : "string"
-          },
-          "version" : {
-            "type" : "string"
-          },
-          "environment" : {
-            "type" : "string"
-          }
-        }
-      },
       "ProblemJson" : {
         "type" : "object",
         "properties" : {
@@ -763,80 +371,6 @@
             "type" : "string",
             "description" : "A human readable explanation specific to this occurrence of the problem.",
             "example" : "There was an error processing the request"
-          }
-        },
-        "description" : "Object returned as response in case of an error."
-      },
-      "ResponseEntry" : {
-        "type" : "object",
-        "properties" : {
-          "statusCode" : {
-            "type" : "integer",
-            "format" : "int32",
-            "example" : 400
-          },
-          "statusMessage" : {
-            "type" : "string",
-            "example" : "Bad request caused by invalid email address"
-          },
-          "requestIDs" : {
-            "type" : "array",
-            "items" : {
-              "type" : "string"
-            }
-          }
-        }
-      },
-      "UploadReport" : {
-        "type" : "object",
-        "properties" : {
-          "uploadID" : {
-            "type" : "string"
-          },
-          "processedItem" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "submittedItem" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "responses" : {
-            "type" : "array",
-            "items" : {
-              "$ref" : "#/components/schemas/ResponseEntry"
-            }
-          },
-          "startTime" : {
-            "type" : "string",
-            "format" : "date-time",
-            "example" : "2024-10-08T14:55:16.302Z"
-          },
-          "endTime" : {
-            "type" : "string",
-            "format" : "date-time",
-            "example" : "2024-10-08T14:55:16.302Z"
-          }
-        }
-      },
-      "UploadStatus" : {
-        "type" : "object",
-        "properties" : {
-          "uploadID" : {
-            "type" : "string"
-          },
-          "processedItem" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "submittedItem" : {
-            "type" : "integer",
-            "format" : "int32"
-          },
-          "startTime" : {
-            "type" : "string",
-            "format" : "date-time",
-            "example" : "2024-10-08T14:55:16.302Z"
           }
         }
       }
