# src/main/java/it/gov/pagopa/gpd/upload/controller/external/v2/FileUploadController.java
@@ -34,7 +34,7 @@ import lombok.extern.slf4j.Slf4j;
 import java.net.URI;
 import java.net.URISyntaxException;
 
-@Tag(name = "Debt Positions CRUD via file upload API")
+@Tag(name = "Massive operation APIs for Debt Positions - v2")
 @ExecuteOn(TaskExecutors.IO)
 @Controller()
 @Slf4j
@@ -43,7 +43,7 @@ import java.net.URISyntaxException;
 public class FileUploadController {
     @Inject
     BlobService blobService;
-    private static final String BASE_PATH = "brokers/{broker-code}/organizations/{organization-fiscal-code}/debtpositions/file/v2";
+    private static final String BASE_PATH = "v2/brokers/{broker-code}/organizations/{organization-fiscal-code}/debtpositions/file";
     @Value("${post.file.response.headers.retry_after.millis}")
     private int retryAfter;
 
